--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 	<!--Title Section-->
 	<div class="intro pt-5 bg-white text-center my-0"> 
-		<div class="container">
-			<h2 class="text-dark display-3 font-weight-bold">Sample-Quiz</h2> <!--Title-->
+		<div class="container"> <!--Title-->
+			<h2 class="text-dark display-3 font-weight-bold">Sample-Quiz</h2> 
 		</div>
 	</div>
 
@@ -23,82 +23,82 @@
 	<!--Score Section-->
 	<div class="result w-70 m-5 rounded shadow bg-primary text-center my-0 d-none">
 		<div class="container lead">
-			<p class="text-white h3 p-4">Your score is <span class="score text-light h3">-</span>%</p>
+			<p class="text-white h3 p-4">You matched <span class="score text-light h3">-</span>% common Covid-19 symptoms</p>
 		</div>
 	</div>
 
 	<!--Quiz Section-->
 	<div class="quiz w-70 m-5 shadow bg-white rounded my-0">
-		<div class="container pb-3">
+		<div class="container pb-3"> <!--Container-->
 			<!--Heading-->
 			<h2 class="text-dark pt-5 mb-0 pb-0">On with the questions!</h2>
 			<!--Questions-->
 			<form class="quiz-form text-dark">
 				<!--First Question-->
-				<div class="mb-3 mt-4">
-					<!--Title Text for First Question-->
-					<p class="lead font-weight-normal mt-3">1. Sample Question 1</p>
-					<!--Radio Buttons-->
-					<div class="form-check my-2 text-dark-50">
-						<input type="radio" name="q1" value="A">
-						<label class="form-check-label">Option A</label>
+					<div class="mb-3 mt-4">
+						<!--Title Text for First Question-->
+							<p class="lead font-weight-normal mt-3">1. Do you have a fever?</p>
+						<!--Radio Buttons-->
+							<div class="form-check my-2 text-dark-50">
+								<input type="radio" name="q1" value="A">
+								<label class="form-check-label">Yes</label>
+							</div>
+						<!--Option 2-->
+							<div class="form-check my-2 text-dark-50">
+								<input type="radio" name="q1" value="B">
+								<label class="form-check-label pb-2">No/label>
+							</div>
 					</div>
-					<!--Option 2-->
-					<div class="form-check my-2 text-dark-50">
-						<input type="radio" name="q1" value="B">
-						<label class="form-check-label pb-2">Option B</label>
-					</div>
-				</div>
 				<!--Second Question-->
-				<div class="mb-3 mt-2">
-					<!--Title Text for Second Question-->
-					<p class="lead font-weight-normal mt-0">2. Sample Question 2</p>
-					<!--Radio Buttons-->
-					<div class="form-check my-2 text-dark-50">
-						<input type="radio" name="q2" value="A">
-						<label class="form-check-label">Option A</label>
+					<div class="mb-3 mt-2">
+						<!--Title Text for Second Question-->
+							<p class="lead font-weight-normal mt-0">2. Sample Question 2</p>
+						<!--Option 1-->
+							<div class="form-check my-2 text-dark-50">
+								<input type="radio" name="q2" value="A">
+								<label class="form-check-label">Option A</label>
+							</div>
+						<!--Option 2-->
+							<div class="form-check my-2 text-dark-50">
+								<input type="radio" name="q2" value="B">
+								<label class="form-check-label pb-2">Option B</label>
+							</div>
 					</div>
-					<!--Option 2-->
-					<div class="form-check my-2 text-dark-50">
-						<input type="radio" name="q2" value="B">
-						<label class="form-check-label pb-2">Option B</label>
-					</div>
-				</div>
 				<!--Third Question-->
-				<div class="mb-3 mt-2">
-					<!--Title Text for Third Question-->
-					<p class="lead font-weight-normal mt-0">3. Sample Question 3</p>
-					<!--Radio Buttons-->
-					<div class="form-check my-2 text-dark-50">
-						<input type="radio" name="q3" value="A">
-						<label class="form-check-label">Option A</label>
+					<div class="mb-3 mt-2">
+						<!--Title Text for Third Question-->
+						<p class="lead font-weight-normal mt-0">3. Sample Question 3</p>
+						<!--Radio Buttons-->
+						<div class="form-check my-2 text-dark-50">
+							<input type="radio" name="q3" value="A">
+							<label class="form-check-label">Option A</label>
+						</div>
+						<!--Option 2-->
+						<div class="form-check my-2 text-dark-50">
+							<input type="radio" name="q3" value="B">
+							<label class="form-check-label pb-2">Option B</label>
+						</div>
 					</div>
-					<!--Option 2-->
-					<div class="form-check my-2 text-dark-50">
-						<input type="radio" name="q3" value="B">
-						<label class="form-check-label pb-2">Option B</label>
-					</div>
-				</div>
 				<!--Fourth Question-->
-				<div class="mb-3 mt-2">
-					<!--Title Text for Fourth Question-->
-					<p class="lead font-weight-normal mt-0">4. Sample Question 4</p>
-					<!--Radio Buttons-->
-					<div class="form-check my-2 text-dark-50">
-						<input type="radio" name="q4" value="A">
-						<label class="form-check-label">Option A</label>
+					<div class="mb-3 mt-2">
+						<!--Title Text for Fourth Question-->
+							<p class="lead font-weight-normal mt-0">4. Sample Question 4</p>
+						<!--Option 1-->
+							<div class="form-check my-2 text-dark-50">
+								<input type="radio" name="q4" value="A">
+								<label class="form-check-label">Option A</label>
+							</div>
+						<!--Option 2-->
+							<div class="form-check my-2 text-dark-50">
+								<input type="radio" name="q4" value="B">
+								<label class="form-check-label pb-2">Option B</label>
+							</div>
 					</div>
-					<!--Option 2-->
-					<div class="form-check my-2 text-dark-50">
-						<input type="radio" name="q4" value="B">
-						<label class="form-check-label pb-2">Option B</label>
+				<!--Submit Button-->
+					<div class="text-center">
+						<input type="submit" class="btn btn-light">
 					</div>
-				</div>
-				<div class="text-center">
-					<input type="submit" class="btn btn-light">
-				</div>
 			</form>
-
 		</div>
 	</div>
 	<script src="app.js"></script>
