changed text content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!--Score Section-->
 	<div class="result w-70 m-5 rounded shadow bg-primary text-center my-0 d-none">
 		<div class="container lead">
-			<p class="text-white h3 p-4">You matched <span class="score text-light h3">-</span>% common Covid-19 symptoms</p>
+			<p class="text-white h3 p-4">You matched with <span class="score text-light h3">-</span>% of common Covid-19 symptoms</p>
 		</div>
 	</div>
 
@@ -90,7 +90,7 @@
 				<!--Fourth Question-->
 					<div class="mb-3 mt-2">
 						<!--Title Text for Fourth Question-->
-							<p class="lead font-weight-normal mt-0">4. (Less Common) Do you have a dry cough?</p>
+							<p class="lead font-weight-normal mt-0">4. (Less Common) Do you have a loss of taste?</p>
 						<!--Option 1-->
 							<div class="form-check my-2 text-dark-50">
 								<input type="radio" name="q4" value="A">
