--- a/nextsteps.html
+++ b/nextsteps.html
@@ -8,6 +8,12 @@
 <body>
 	<div class="container">
 		<h1 class="text-center mt-5">Next Steps</h1>
+		<br><br><br><br><br><br><br>
+		<ol>
+			<h3><li>Get Tested</li></h3>
+			<h3><li>See a Doctor</li></h3>
+			<h3><li>Get Yourself Quarantined</li></h3>
+		</ol>
 	</div>
 </body>
 </html>
